--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -90,8 +90,7 @@
         <%= text_field_tag :query,
             params[:query],
             class: "form-control",
-            placeholder: "Procure um Evento"
-        %>
+            placeholder: "Procure um Evento" %>
       <% end %>
     </div>
     <div class="widgets-widget-container widgets-event">
