--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,24 +1,22 @@
 <%= cl_image_tag @event.photo.key, height: 300, width: 620, crop: :fill, class: 'event-banner-show'%>
 <%= render 'posts/post_form' %>
-
 <% @posts.each_with_index do |post, index| %>
-    <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
-      <%= link_to profile_path(post.user) do%>  
-        <div class="post-avatar">
-          <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
-        </div>
-      <%end%>
+  <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
+    <%= link_to profile_path(post.user) do%>
+      <div class="post-avatar">
+        <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
+      </div>
+    <% end %>
     <%= link_to post_path(post) do%>
       <div class="post-body">
         <div class="post-header">
           <div class="post-header-text">
             <h3>
               <%= User.where(id: post.user_id).first.first_name %>
-              <span class="post-header-special"
-                ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %>
+              <span class="post-header-special">
+                <span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %>
                 <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i>
-                <span class = "event-name"> <%= post.event.name.downcase %> </span> </span
-              >
+                <span class = "event-name"> <%= post.event.name.downcase %> </span> </span>
             </h3>
           </div>
           <div class="post-header-description">
@@ -43,11 +41,11 @@
                   </div>
                 </div>
               <%else%>
-                  <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
+                <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
               <% end %>
-              <p class = "published-event-with-photo">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
+              <p class = "published-event-with-photo"><%= I18n.l(post.created_at, format: :long) %></p>
             <% else %>
-              <p class = "published-event">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
+              <p class = "published-event"><%= I18n.l(post.created_at, format: :long) %></p>
             <% end %>
           </div>
         </div>
