--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,11 +7,10 @@
       <div class="post-header-text">
         <h3>
           <%= User.where(id: @post.user_id).first.first_name %>
-          <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: @post.user_id).first.username %>
+          <span class="post-header-special">
+            <span class="material-icons post-badge"> verified </span>@<%= User.where(id: @post.user_id).first.username %>
             <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i>
-            <span class = "event-name"> <%= @post.event.name.downcase %> </span> </span
-          >
+            <span class = "event-name"> <%= @post.event.name.downcase %> </span> </span>
         </h3>
       </div>
       <div class="post-header-description">
@@ -35,18 +34,16 @@
                 </button>
               </div>
             </div>
-          <%else%>
-              <%= cl_image_tag @post.photos.first.key, class: "carousel-inner carousel-item active" %>
+          <% else %>
+            <%= cl_image_tag @post.photos.first.key, class: "carousel-inner carousel-item active" %>
           <% end %>
         <% end %>
-        <p class = "published-event">publicado em <%= I18n.l(@post.created_at, format: :long) %>, às <%= @post.created_at.strftime("%H:%M").downcase %>.</p>
+        <p class = "published-event"><%= I18n.l(@post.created_at, format: :long) %></p>
       </div>
     </div>
   </div>
 </div>
-
 <%= render 'posts/post_replies_form'%>
-
 <% @posts.each_with_index do |post, index| %>
   <%= link_to post_path(post) do%>
     <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
@@ -61,8 +58,7 @@
               <span class="post-header-special"
                 ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %>
                 <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i>
-                <span class = "event-name"> <%= post.event.name.downcase %> </span> </span
-              >
+                <span class = "event-name"> <%= post.event.name.downcase %> </span> </span>
             </h3>
           </div>
           <div class="post-header-description">
@@ -87,10 +83,10 @@
                   </div>
                 </div>
               <%else%>
-                  <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
+                <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
               <% end %>
             <% end %>
-            <p class = "published-event">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
+            <p class = "published-event"><%= I18n.l(post.created_at, format: :long) %></p>
           </div>
         </div>
       </div>
