add notification and messages badge in all pages

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -47,4 +47,9 @@
   position: relative !important;
   top: -15px !important;
   left: -15px !important;
+  border-radius: 50%;
+}
+
+.not-pos {
+  left: -200px;
 }
