--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -14,6 +14,9 @@
   <p class="profile-followers-text">Seguidores</p>
   <% unless @user == current_user %>
     <% if @follows.present? %>
+      <%= link_to chatroom_path(@chatroom.id), class: "message-button" do %>
+        <i class="fas fa-comment-alt"></i>
+      <% end %>
       <%= link_to "Deixar de seguir", follow_path(user_id: @user), method: :delete, class: "unfollow-button" %>
     <% else %>
       <%= link_to "Seguir", follows_path(user_id: @user), method: :post, class: "follow-button" %>
