--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -19,7 +19,7 @@
       <span class="material-icons"> notifications_none </span>
       <h2>Notificações</h2>
       <span class="badge position-absolute not-pos">
-        <%= @notifications.count if @notifications %>
+        <%= @notifications_number if @notifications_number > 0 %>
       </span>
     </div>
   <%end%>
@@ -27,7 +27,7 @@
     <div class="sidebar-option">
       <span class="material-icons"> mail_outline </span>
       <h2>Mensagens</h2>
-      <span class="badge"><%= @chatrooms.count if @chatrooms %></span>
+      <span class="badge"><%= @chatrooms.count if @chatrooms.present? %></span>
     </div>
   <% end %>
   <%= link_to profile_path(current_user), class: 'text-decoration-none text-dark' do %>
